refactorizacion del negocio y dominio